# Ros2MoCap

./: README.md  launch.sh  launch_world_to_base.sh
install/: local_setup.sh  setup.sh
install/MoCap/lib/MoCap/: MoCap
install/MoCap/share/MoCap/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap/lib/mocap/: mocap
install/mocap/share/ament_index/resource_index/parent_prefix_path/: mocap
install/mocap/share/mocap/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap/share/mocap/cmake/: mocapConfig.cmake
install/mocap_interfaces/include/mocap_interfaces/msg/: point.h  point.hpp  rigid_body_array.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/mocap_interfaces/include/mocap_interfaces/msg/detail/: point__builder.hpp  point__functions.c  point__functions.h  point__rosidl_typesupport_fastrtps_c.h  point__rosidl_typesupport_fastrtps_cpp.hpp  point__rosidl_typesupport_introspection_cpp.hpp  point__struct.h  point__type_support.cpp  point__type_support.h  rigid_body__builder.hpp  rigid_body__rosidl_typesupport_fastrtps_c.h  rigid_body__rosidl_typesupport_fastrtps_cpp.hpp  rigid_body__rosidl_typesupport_introspection_cpp.hpp  (+23 more)
install/mocap_interfaces/share/mocap_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap_interfaces/share/mocap_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  mocap_interfaces__rosidl_generator_cExport-noconfig.cmake  mocap_interfaces__rosidl_generator_cExport.cmake  mocap_interfaces__rosidl_typesupport_cExport.cmake  mocap_interfaces__rosidl_typesupport_cppExport.cmake  mocap_interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
install/mocap_interfaces/share/mocap_interfaces/msg/: RigidBody.idl  UnitQuaternion.idl
install/mocap_pub/lib/mocap_pub/: mocap_pub
install/mocap_pub/share/mocap_pub/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/world_to_base/lib/world_to_base/: world_to_base
install/world_to_base/share/world_to_base/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
samples/SampleClient/: Client-output.pts  SampleClient.cpp
src/MoCap/: CMakeLists.txt
src/MoCap/src/: MessageParser.cpp  MoCap.cpp  NatNetClient.cpp
src/mocap/: CMakeLists.txt  package.xml
src/mocap/include/MessageParser/: MessageParser.h
src/mocap/include/MoCap/: MoCap.h  myconfig.h
src/mocap/include/MoCapNatNetClient/: MoCapNatNetClient.h
src/mocap/msg/: RigidBody.msg  RigidBodyArray.msg
src/mocap/src/: MessageParser.cpp  MoCap.cpp  MoCapNatNetClient.cpp
src/mocap_interfaces/: CMakeLists.txt
src/mocap_interfaces/msg/: RigidBody.msg
src/mocap_pub/: CMakeLists.txt
src/mocap_pub/include/MoCapPublisher/: MoCapPublisher.h
src/mocap_pub/src/: MoCapPublisher.cpp
src/world_to_base/: CMakeLists.txt
src/world_to_base/include/: WorldToBase.h
src/world_to_base/include/MoCapSubscriber/: MoCapSubscriber.h
src/world_to_base/include/WorldToBase/: WorldToBase.h
src/world_to_base/src/: MoCapSubscriber.cpp  WorldToBase.cpp
(+1 files in other folders)
